# Makefile.am        Makefile for alternative system functions
#
# See file COPYING for details.
#
# $Id: Makefile.am,v 1.2 2003/06/09 22:22:21 jshiffer Exp $

noinst_LTLIBRARIES = libreplace.la

libreplace_la_CFLAGS = -no-cpp-precomp
libreplace_la_SOURCES = dummy.c
libreplace_la_LIBADD = dummy.lo @LTLIBOBJS@

include $(top_srcdir)/Makefile.extra

